--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,31 +1,56 @@
-services:
-
-  database:
-    build: "database"
-    environment:
-      - POSTGRES_PASSWORD=pwd
-    volumes:
-      - db-volume:/var/lib/postgresql/data
-    networks:
-      - my-network
-
-  simple-api:
-    build: "simple-api"
-    environment:
-      - DATABASE_HOST=database
-      - DATABASE_PASSWORD=pwd
-    networks:
-      - my-network
-
-  httpd:
-    build: "http-server"
-    ports:
-      - "80:80"
-    networks:
-      - my-network
-
-networks:
-  my-network:
-
-volumes:
-  db-volume :
+name: CI devops 2025
+ 
+on:
+  push:
+    branches: [ main, develop ]
+  pull_request:
+ 
+jobs:
+  test-backend:
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v4
+ 
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+ 
+      - name: Build and test with Maven
+        run: mvn clean verify
+        working-directory: simple-api
+ 
+  build-and-push-docker-image:
+    needs: test-backend
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+ 
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.TOKEN_DOCKER }}
+ 
+      - name: Build image and push backend
+        uses: docker/build-push-action@v6
+        with:
+          context: simple-api
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/tp-devops-simple-api:latest
+          push: true
+ 
+      - name: Build image and push database
+        uses: docker/build-push-action@v6
+        with:
+          context: database
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/tp-devops-database:latest
+          push: true
+ 
+      - name: Build image and push httpd
+        uses: docker/build-push-action@v6
+        with:
+          context: http-server
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/tp-devops-httpd:latest
+          push: true
