connecting to sonar

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Build and test with Maven
         run: mvn clean verify
         working-directory: simple-api
+      
  
   build-and-push-docker-image:
     needs: test-backend
@@ -54,3 +55,10 @@ jobs:
           context: http-server
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/tp-devops-httpd:latest
           push: true
+
+  verify-sonar:
+   runs-on: ubuntu-24.04
+   steps:
+      - name: Connect to sonar 
+        run: mvn -B verify sonar:sonar -Dsonar.projectKey=axelle23 -Dsonar.organization=axelle23 -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}  --file ./simple-api/pom.xml
+        working-directory: simple-api
