--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,8 @@ jobs:
    steps:
       - name: Connect to sonar 
         run: mvn -B verify sonar:sonar -Dsonar.projectKey=axelle23 -Dsonar.organization=axelle23 -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}  
-        working-directory: simple-api
-        
+        working-directory: ./runner/work/tp-devops-correction-docker/simple-api
+
   build-and-push-docker-image:
     needs: test-backend
     runs-on: ubuntu-24.04
