--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,7 @@ jobs:
    runs-on: ubuntu-24.04
    steps:
       - name: Connect to sonar 
-        run: mvn -B verify sonar:sonar -Dsonar.projectKey=axelle23 -Dsonar.organization=axelle23 -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}  
-        working-directory: ./runner/work/tp-devops-correction-docker/simple-api
+        run: mvn -B verify sonar:sonar -Dsonar.projectKey=axelle23 -Dsonar.organization=axelle23 -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }} --file ./simple-api
 
   build-and-push-docker-image:
     needs: test-backend
