--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,13 @@ jobs:
    runs-on: ubuntu-24.04
    steps:
     - uses: actions/checkout@v4
+    
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: '21'
+
     - name: Connect to sonar 
       run: mvn -B verify sonar:sonar -Dsonar.projectKey=axelle23 -Dsonar.organization=axelle23 -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }} 
       working-directory: simple-api
