--- a/my-project/ansible/roles/app/tasks/main.yml
+++ b/my-project/ansible/roles/app/tasks/main.yml
@@ -1,9 +1,10 @@
-- name: Create app container
-  hosts: localhost
-  gather_facts: false
-  tasks:
-
-   - name: launch backend container
-     docker_container:
-       name: backend_devops
-       image: abrosse/tp-devops-backend:1.0
+- name: launch backend container
+  docker_container:
+    name: backend_devops
+    image: abrosse/tp-devops-backend:1.0
+    env:
+      POSTGRES_PASSWORD: {{ DATABASE_PASSWORD }}
+    ports:
+     - "8080:9000"
+    networks:
+     - name: "devops-network"
