--- a/my-project/ansible/roles/proxy/tasks/main.yml
+++ b/my-project/ansible/roles/proxy/tasks/main.yml
@@ -2,6 +2,7 @@
   docker_container:
     name: proxy_devops
     image: "abrosse/tp-devops-httpd:latest"
+    pull: yes
     ports:
      - 80:80
     networks:
