"le commit de la fin"

--- a/my-project/ansible/roles/launch_backend/tasks/main.yml
+++ b/my-project/ansible/roles/launch_backend/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: launch backend container
   docker_container:
     name: backend_devops
-    image: "abrosse/tp-devops-backend:latest"
+    image: "tp-devops-backend:latest"
     pull: yes
     ports:
      - "8080:9000"
