--- a/my-project/ansible/roles/launch_backend/tasks/main.yml
+++ b/my-project/ansible/roles/launch_backend/tasks/main.yml
@@ -1,14 +1,14 @@
 - name: launch backend container
   docker_container:
     name: backend
-    image: "tp-devops-backend:latest"
+    image: "abrosse/tp-devops-backend:latest"
     pull: yes
     ports:
      - "8080:9000"
     networks:
      - name: "devops-network"
     env:
-      DATABASE_HOST: database_devops
+      DATABASE_HOST: database
       DATABASE_PASSWORD: we4reDATA
       DATABASE_PORT: "5432"
       DATABASE_NAME: db
