--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,11 +75,10 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Set up Python and install Ansible
         run: 
-          python -m pip install --upgrade pip
-          pip install ansible
+          python -m pip install --upgrade pip && pip install ansible
 
       - name: Run Ansible Playbook
         run: ansible-playbook -i inventories/setup.yml playbook.yml
