--- a/my-project/ansible/inventories/setup.yml
+++ b/my-project/ansible/inventories/setup.yml
@@ -1,7 +1,8 @@
 all:
  vars:
    ansible_user: admin
-   ansible_ssh_private_key_file: ~/.ssh/id_rsa
+   #ansible_ssh_private_key_file: ~/.ssh/id_rsa
+   ansible_ssh_private_key_file: ${{ secrets.ID_RSA }}
  children:
    prod:
      hosts: axelle.brosse.takima.cloud
