--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,6 +81,6 @@ jobs:
           python -m pip install --upgrade pip && pip install ansible
 
       - name: Run Ansible Playbook
-        run: ansible-playbook -i my-project/ansible/inventories/setup.yml my-project/ansible/playbook.yml
+        run: ansible-playbook -i my-project/ansible/inventories/setup.yml my-project/ansible/playbook.yml -e "ansible_ssh_private_key_file= ${{ secrets.ID_RSA }}"
 
        
