--- a/my-project/ansible/inventories/setup.yml
+++ b/my-project/ansible/inventories/setup.yml
@@ -2,7 +2,7 @@ all:
  vars:
    ansible_user: admin
    #ansible_ssh_private_key_file: ~/.ssh/id_rsa
-   ansible_ssh_private_key_file: ${{ secrets.ID_RSA }}
+   #ansible_ssh_private_key_file: ${{ secrets.ID_RSA }}
  children:
    prod:
      hosts: axelle.brosse.takima.cloud
