--- a/my-project/ansible/env.yml
+++ b/my-project/ansible/env.yml
@@ -1,8 +1,12 @@
 
-app_env: production
 db_host: localhost
-db_port: 5432
+
 DATABASE_HOST: database
 DATABASE_PASSWORD: pwd
 
-port_http: 80:80s
+port_http: "80:80"
+
+
+# BACKEND 
+port_backend: "8082:9000"
+db_port: 5432
