--- a/my-project/ansible/env.yml
+++ b/my-project/ansible/env.yml
@@ -1,12 +1,13 @@
 
 db_host: localhost
 
-DATABASE_HOST: database
-DATABASE_PASSWORD: pwd
 
-port_http: "80:80"
-
+# PROXY
+port_http: "81:80"
 
 # BACKEND 
 port_backend: "8082:9000"
 db_port: 5432
+
+# DATABASE 
+DATABASE_PASSWORD: pwd
