--- a/my-project/ansible/env.yml
+++ b/my-project/ansible/env.yml
@@ -6,7 +6,7 @@ db_host: localhost
 port_http: "81:80"
 
 # BACKEND 
-port_backend: "8082:9000"
+port_backend: 8082:9000
 db_port: "5432"
 
 # DATABASE 
